--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
 
 </head>
 <body>
+<section class=body>
   <h1>Maxwell Gray</h1>
   <h2>medievalist, DH, grad student, UW-Madison &nbsp; &nbsp; &nbsp; &nbsp; </h2>
   <h3>About</h3>
   <p>I am a medievalist graduate student in the English department and iSchool at the University of Wisconsin-Madison where I study Old English poetry and digital humanities. My writing and research focus on problems of modern and contemporary medievalism, and employ practices of literary translation, documentary poetry and public, open-access digital scholarship. I am also a third-year research assistant on the digital humanities platform project <a href="http://www.digitalmappa.org/" target="_blank">Digital Mappa</a> based on campus at the Center for the History of Print and Digital Culture where I use digital technology to support teaching and publishing in the humanities and higher education.</p>
-<section class=text>
+<div class=text>
   <u>Contact</u>: <a href="https://english.wisc.edu/staff/gray-maxwell/" target="_blank">mgray5 [at] wisc [dot] edu </a> | <a href="https://twitter.com/maxgray20" target="_blank">@maxgray20</a><br>
   <u>Programs</u>: MLIS, iSchool, UW-Madison; PhD, English, UW-Madison<br>
   <u>Degrees</u>: MA, English, UW-Madison; MA, Comparative Literature, UW-Madison; BA, English, magna cum laude, Phi Beta Kappa, Rhodes College<br>
-</section>
+</div>
   <h3>Publications</h3>
   <ul>
     <li>“Grave,” @ <a href="http://www.lunchreview.org/grave" target="_black">Lunch</a> (Punctum Books)</li>
@@ -26,5 +27,6 @@
     <br>
   <br>
   <br>
+  </section>
 </body>
 </html>
