--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Maxwell Gray</title>
     <link rel="stylesheet" href="styles.css">
     <meta name="viewport" content="width=device-width">
-
+    <meta name="keywords" content="maxwell gray,max gray,uw madison,madison">
+    <meta name="description" content="Maxwell Gray is a medievalist MLIS/PhD student at the University of Wisconsin-Madison.">
 </head>
 <body>
   <h1>Maxwell Gray</h1>
