--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <h1>Maxwell Gray</h1>
-  <h2>medievalist, grad student, UW-Madison &nbsp; &nbsp; &nbsp; &nbsp; </h2>
+  <h2>medievalist, DH, grad student, UW-Madison &nbsp; &nbsp; &nbsp; &nbsp; </h2>
   <h3>About</h3>
   <p>I am a medievalist graduate student in the English department and iSchool at the University of Wisconsin-Madison where I study Old English poetry and digital humanities (DH). My writing and research focus on problems of modern and contemporary medievalism, and employ practices of translation, documentary poetry and public digital scholarship. I am also a third-year research assistant on the digital humanities platform project <a href="http://www.digitalmappa.org/" target="_blank">Digital Mappa</a> based on campus at the Center for the History of Print and Digital Culture where I use digital technology to support research and teaching in the humanities and higher education.</p>
 <div class=text>
