--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <h1>Maxwell Gray</h1>
   <h2>medievalist, DH, grad student, UW-Madison &nbsp; &nbsp; &nbsp; &nbsp; </h2>
   <h3>About</h3>
-  <p>I am an American poet and medievalist graduate student at the University of Wisconsin-Madison. My writing and research focus on problems of modern and contemporary medievalism, and employ creative practices of translation, documentary poetry and public digital scholarship. I am also a third-year research assistant on the digital humanities platform project <a href="http://www.digitalmappa.org/" target="_blank">Digital Mappa</a> based on campus at the Center for the History of Print and Digital Culture where I use digital technology to support teaching and research in the humanities.</p>
+  <p>I am an American poet and medievalist graduate student at the University of Wisconsin-Madison. My writing and research focus on problems of modern and contemporary medievalism, and employ creative practices of translation, documentary poetry and public digital scholarship. I am also a third-year research assistant on the digital humanities (DH) platform project <a href="http://www.digitalmappa.org/" target="_blank">Digital Mappa</a> based on campus at the Center for the History of Print and Digital Culture where I use digital technology to support teaching and research in the humanities.</p>
 <div class=text>
   <u>Contact</u>: <a href="https://english.wisc.edu/staff/gray-maxwell/" target="_blank">mgray5 [at] wisc [dot] edu </a> | <a href="https://twitter.com/maxgray20" target="_blank">@maxgray20</a><br>
   <u>Programs</u>: MLIS, iSchool, UW-Madison; PhD, English, UW-Madison<br>
