--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <h1>Maxwell Gray</h1>
-  <h2>poetry / digital humanities / medieval studies &nbsp; &nbsp; &nbsp; &nbsp; </h2>
+  <h2>poetry / medieval studies / digital humanities &nbsp; &nbsp; &nbsp; &nbsp; </h2>
   <h3>About</h3>
   <p>Maxwell Gray is an American poet and medievalist graduate student at the University of Wisconsin-Madison. His writing and research focus on problems of modern and contemporary medievalism, and employ creative practices of translation, documentary poetry and public digital scholarship. He is also a third-year research assistant on the digital humanities platform project <a href="http://www.digitalmappa.org/" target="_blank">Digital Mappa</a> based on campus at the Center for the History of Print and Digital Culture, where he uses digital technology to support teaching and research in the humanities.</p>
 <div class=text>
