--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <title>Maxwell Gray</title>
     <link rel="stylesheet" href="styles.css">
     <meta name="viewport" content="width=device-width">
-    <meta name="keywords" content="maxwell gray,max gray,uw madison,uw,madison,digital humanities,medievalist,grad student,phd, digital, poetry">
+    <meta name="keywords" content="maxwell gray,max gray,uw madison,uw,madison,digital humanities,medievalist,grad student,phd,mlis,digital,poetry">
     <meta name="description" content="Maxwell Gray is a medievalist MLIS/PhD student at the University of Wisconsin-Madison.">
 </head>
 <body>
   <h1>Maxwell Gray</h1>
   <h2>poetry / medieval studies / digital humanities &nbsp; &nbsp; &nbsp; &nbsp; </h2>
   <h3>About</h3>
-  <p>Maxwell Gray is an American poet and digital humanities graduate student at the University of Wisconsin-Madison. His research includes practices of translation, documentary poetry and public digital scholarship. He is also a third-year research assistant on the digital humanities platform project <a href="http://www.digitalmappa.org/" target="_blank">Digital Mappa</a> based on campus at the Center for the History of Print and Digital Culture, where he does project/product management, open-access publications and digital pedagogy.</p>
+  <p>Maxwell Gray is an American poet and digital humanities graduate student at the University of Wisconsin-Madison. His research includes practices of translation, documentary poetry and public digital scholarship. He is also a third-year research assistant on the digital humanities platform project <a href="http://www.digitalmappa.org/" target="_blank">Digital Mappa</a> based on campus at the Center for the History of Print and Digital Culture, where he does project/product management, open-access publication and digital pedagogy.</p>
 <div class=text>
   <u>Contact</u>: <a href="https://english.wisc.edu/staff/gray-maxwell/" target="_blank">mgray5 [at] wisc [dot] edu</a> | <a href="https://twitter.com/maxgray20" target="_blank">@maxgray20</a><br>
   <u>Programs</u>: MLIS, iSchool, UW-Madison; PhD, English, UW-Madison<br>
