--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <h1>Maxwell Gray</h1>
-  <h2>poetry / medieval studies / digital humanities &nbsp; &nbsp; &nbsp; &nbsp; </h2>
+  <h2>poetry / library studies / digital humanities &nbsp; &nbsp; &nbsp; &nbsp; </h2>
   <h3>About</h3>
   <p>Maxwell Gray is an American poet, and library studies and digital humanities graduate student at the University of Wisconsin-Madison. His research includes practices of translation, documentary poetry and public digital scholarship. He is also a third-year research assistant on the digital humanities platform project <a href="http://www.digitalmappa.org/" target="_blank">Digital Mappa</a> based on campus at the Center for the History of Print and Digital Culture, where he does project/product management, open-access publication and digital pedagogy.</p>
 <div class=text>
