--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <h1>Maxwell Gray</h1>
   <h2>poetry / library studies / digital humanities &nbsp; &nbsp; &nbsp; &nbsp; </h2>
   <h3>About</h3>
-  <p>Maxwell Gray is an American poet and library studies graduate student at the University of Wisconsin-Madison. His research includes practices of documentary poetry, literary translation and public digital scholarship. He is also a third-year research assistant on the digital humanities platform project <a href="http://www.digitalmappa.org/" target="_blank">Digital Mappa</a> based on campus at the Center for the History of Print and Digital Culture, where he does project management, open-access publication and digital pedagogy. Talk to him about medieval literary studies, academic information technology and contemporary poetry.</p>
+  <p>Maxwell Gray is an American poet and graduate student in literary and library studies at the University of Wisconsin-Madison. His research includes practices of documentary poetry, literary translation and public digital scholarship. He is also a third-year research assistant on the digital humanities platform project <a href="http://www.digitalmappa.org/" target="_blank">Digital Mappa</a> based on campus at the Center for the History of Print and Digital Culture, where he does project management, open-access publication and digital pedagogy. Talk to him about medieval literary studies, academic information technology and contemporary poetry.</p>
 <div class=text>
   <u>Contact</u>: <a href="https://english.wisc.edu/staff/gray-maxwell/" target="_blank">mgray5 [at] wisc [dot] edu</a> | <a href="https://twitter.com/maxgray20" target="_blank">@maxgray20</a><br>
   <u>Programs</u>: MLIS, iSchool, UW-Madison; PhD, English, UW-Madison<br>
