--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
   <h1>Maxwell Gray</h1>
-  <h2>poetry / library studies / digital humanities &nbsp; &nbsp; &nbsp; &nbsp; </h2>
-  <h3>About</h3>
-  <p>Maxwell Gray is a poet and graduate student in literary and library studies at the University of Wisconsin-Madison. His academic research includes practices of documentary poetry, literary translation and public digital scholarship. He is also a research assistant on the digital humanities platform project <a href="http://www.digitalmappa.org/" target="_blank">Digital Mappa</a> based on campus at the Center for the History of Print and Digital Culture, where he does project management, open-access publication and digital pedagogy. Talk to him about medieval literary studies, academic information technology and contemporary experimental poetry.</p>
+  <h2>poet | translator | digital humanist &nbsp; &nbsp; &nbsp; &nbsp; </h2>
+  <h3>About Myself</h3>
+  <p>I am a poet and graduate student in literary and library studies at the University of Wisconsin-Madison. My academic research includes practices of documentary poetry, literary translation and public digital scholarship. I am also a research assistant on the digital humanities platform project <a href="http://www.digitalmappa.org/" target="_blank">Digital Mappa</a> based on campus at the Center for the History of Print and Digital Culture, where I do project management, open-access publication and digital pedagogy. Talk to me about medieval literary studies, academic information technology and contemporary experimental poetry. Thank you for reading.</p>
 <div class=text>
   <u>Contact</u>: <a href="https://english.wisc.edu/staff/gray-maxwell/" target="_blank">mgray5 [at] wisc [dot] edu</a> | <a href="https://twitter.com/maxgray20" target="_blank">@maxgray20</a><br>
   <u>Programs</u>: MLIS, iSchool, UW-Madison; PhD, English, UW-Madison<br>
