--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <h3>About</h3>
   <p>Officially, I'm a graduate student in literary and library studies at the University of Wisconsin-Madison. More unofficially, I'm a poet, translator and digital humanist. My research includes practices of documentary poetry, literary translation and public digital scholarship. I'm also a research assistant on the digital humanities platform project <a href="http://www.digitalmappa.org/" target="_blank">Digital Mappa</a> based on campus at the Center for the History of Print and Digital Culture, where I do project/product management, open-access publication and digital pedagogy. Talk to me about medieval literary studies, academic information technology and contemporary poetry.</p>
 <div class=text>
-  <u>Contact</u>: <a href="https://english.wisc.edu/staff/gray-maxwell/" target="_blank">mgray5 [at] wisc [dot] edu</a> | <a href="https://twitter.com/maxgray20" target="_blank">@maxgray20</a> | <a href="https://hcommons.org/members/maxgray20/" target="_blank">Humanities Commons</a><br>
+  <u>Contact</u>: <a href="https://english.wisc.edu/staff/gray-maxwell/" target="_blank">mgray5 [at] wisc [dot] edu</a> | <a href="https://twitter.com/maxgray20" target="_blank">@maxgray20</a> | <a href="https://hcommons.org/members/maxgray20/" target="_blank">hcommons.org</a><br>
   <u>Programs</u>: MLIS, iSchool, UW-Madison; PhD, English, UW-Madison<br>
   <u>Degrees</u>: MA, English, UW-Madison; MA, Comparative Literature, UW-Madison; BA, English, Phi Beta Kappa, Rhodes College<br>
 </div>
