--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <h1>Maxwell Gray</h1>
-  <h2>libraries / literature / digital humanities &nbsp; &nbsp; </h2>
+  <h2>poetry / libraries / digital humanities &nbsp; &nbsp; </h2>
   <h3>About</h3>
   <p>I'm a medievalist graduate student in literary and library studies in the English department and the iSchool at the University of Wisconsin-Madison. My research includes practices of documentary poetry, literary translation and public digital scholarship. I'm also a research assistant on the digital humanities platform project <a href="http://www.digitalmappa.org/" target="_blank">Digital Mappa</a> based on campus at the Center for the History of Print and Digital Culture, where I do project and product management, open-access publication, and digital pedagogy. Talk to me about academic information technology, medieval literary studies, and modern and contemporary poetry.</p>
 <div class=text>
