--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <h3>About</h3>
   <p>I'm a medievalist graduate student in literary and library studies in the English department and the iSchool at the University of Wisconsin-Madison. My research includes practices of documentary poetry, literary translation and public digital scholarship. I teach college writing and research in the English department, and I spent three years as a research assistant on the digital humanities platform project <a href="http://www.digitalmappa.org/" target="_blank">Digital Mappa</a> based on campus at the Center for the History of Print and Digital Culture, where I did project and product management, open-access publications, and digital pedagogy. Talk to me about poetry, translation, digital humanities, and academic libraries and information technology.</p>
 <div class=text>
-  <u>Online</u>: <a href="https://english.wisc.edu/staff/gray-maxwell/" target="_blank">mgray5 [at] wisc [dot] edu</a> | <a href="https://hcommons.org/members/maxgray20/" target="_blank">hcommons.org</a> | <a href="https://twitter.com/maxgray20" target="_blank">@maxgray20</a><br>
+  <u>Online</u>: <a href="https://english.wisc.edu/staff/gray-maxwell/" target="_blank">english.wisc.edu</a> | <a href="https://hcommons.org/members/maxgray20/" target="_blank">hcommons.org</a> | <a href="https://twitter.com/maxgray20" target="_blank">@maxgray20</a><br>
   <u>Programs</u>: MLIS, iSchool, UW-Madison; PhD, English, UW-Madison<br>
   <u>Degrees</u>: MA, English, UW-Madison; MA, Comparative Literature, UW-Madison; BA, English, Phi Beta Kappa, Rhodes College<br>
 </div>
