--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Maxwell Gray</title>
+    <title>Maxwell Gray — poetry / libraries / digital humanities</title>
     <link rel="stylesheet" href="styles.css">
     <meta name="viewport" content="width=device-width">
     <meta name="keywords" content="maxwell gray,max gray,uw madison,uw,madison,digital humanities,medievalist,grad student,phd,mlis,digital,poetry">
