--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="description" content="Maxwell Gray is a medievalist MLIS/PhD student at the University of Wisconsin-Madison.">
 </head>
 <body itemscope itemtype="http://schema.org/Person">
+    <div class="raisedbox">
   <h1 itemprop="name">Maxwell Gray</h1>
   <h2 itemprop="knowsAbout">poetry / libraries / digital humanities &nbsp; &nbsp; </h2>
   <h3>About</h3>
@@ -30,5 +31,6 @@
   <br>
   <br>
   <br>
+    </div>
 </body>
 </html>
