--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width">
     <meta name="keywords" content="maxwell gray,max gray,uw madison,uw,madison,digital humanities,medievalist,grad student,phd,mlis,digital,poetry">
     <meta name="description" content="Maxwell Gray is a medievalist MLIS/PhD student at the University of Wisconsin-Madison.">
+    <link rel="icon" type="image/jpg" href="/Gray.Max_full-768x922.jpg"/>
+    <link rel="icon" type="image/jpg" href="https://maxgray20.com/Gray.Max_full-768x922.jpg"/>
 </head>
 <body itemscope itemtype="http://schema.org/Person">
     <div class="raisedbox">
