--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <div class=text>
   <u>Online</u>: <a itemprop="mainEntityOfPage" href="https://english.wisc.edu/staff/gray-maxwell/" target="_blank">english.wisc.edu</a> | <a itemprop="mainEntityOfPage" href="https://hcommons.org/members/maxgray20/" target="_blank">hcommons.org</a> | <a itemprop="identifier" href="https://twitter.com/maxgray20" target="_blank">@maxgray20</a><br>
   <u>Programs</u>: MLIS, iSchool, UW-Madison; PhD, English, UW-Madison<br>
-  <u>Degrees</u>: MA, English, UW-Madison; MA, Comparative Literature, UW-Madison; BA, English, Phi Beta Kappa, Rhodes College<br>
+  <u>Degrees</u>: MA, English, UW-Madison; MA, Comparative Literature, UW-Madison; BA, English, Phi Beta Kappa, Rhodes College (Memphis, TN)<br>
 </div>
   <h3>Publications</h3>
   <ul>
