--- a/index.html
+++ b/index.html
@@ -5,17 +5,23 @@
     <title>Maxwell Gray — poetry / libraries / digital humanities</title>
     <link rel="stylesheet" href="styles.css">
     <meta name="viewport" content="width=device-width">
-    <meta name="keywords" content="maxwell gray,max gray,uw madison,uw,madison,digital humanities,medievalist,grad student,phd,mlis,digital,poetry">
+    <meta name="keywords" content="maxwell gray,max gray,gray,uw madison,uw,madison,digital humanities,digital,humanities,poetry,medievalist,grad student,mlis,phd">
     <meta name="description" content="Maxwell Gray is a medievalist MLIS/PhD student at the University of Wisconsin-Madison.">
     <link rel="icon" type="image/jpg" href="/Gray.Max_full-768x922.jpg"/>
     <link rel="icon" type="image/jpg" href="https://maxgray20.com/Gray.Max_full-768x922.jpg"/>
 </head>
 <body itemscope itemtype="http://schema.org/Person">
+    <div class="navbar">
+  <a href="#home">Home</a>
+  <a href="#about">About</a>
+    </div>
     <div class="raisedbox">
-  <h1 itemprop="name">Maxwell Gray</h1>
-  <h2>poetry / libraries / digital humanities &nbsp; &nbsp; </h2>
-  <h3>About</h3>
-    <p>I'm a graduate student in literary and library studies in the English department and the iSchool at the University of Wisconsin-Madison. My research includes poetry, translation, and public digital scholarship. My current creative research project is a digital documentary poetry project called <a itemprop="creator" href="https://madisonmounds.com" target="_blank"><i>MOUNDS</i></a>.</p> <p>On campus, I teach college writing and information literacy in the English department, and I'm involved in the Data Carpentry workshop group at the Data Science Hub. For three years I was a research assistant at the digital humanities platform project <a itemprop="affiliation" href="https://www.digitalmappa.org/" target="_blank">Digital Mappa</a> at the Center for the History of Print and Digital Culture, where I did project and product management, open-access scholarly publications, and digital pedagogy. Recently I worked on metadata standards at the <a href="https://mukurtu-midwest.libraries.wsu.edu/" target="_blank">Mukurtu Midwest Hub</a> at WiLS (formerly Wisconsin Library Services).</p> <p>Professional interests include digital humanities and academic libraries. Other research areas include medieval studies, literary theory, and new media.</p>
+  <h1 itemprop="name">Hello, I'm Maxwell Gray.</h1>
+  <h2>I make poetry and write public digital scholarship in Wisconsin.</h2>
+  <h3>More about</h3>
+    <p>I'm a graduate student in literary and library studies in the English department and the iSchool at the University of Wisconsin-Madison. My research includes poetry, translation, and public digital scholarship. My current creative research project is a digital documentary poetry project called <a itemprop="creator" href="https://madisonmounds.com" target="_blank"><i>MOUNDS</i></a>.</p>
+    <p>On campus, I teach college writing and information literacy in the English department, and I'm involved in the Data Carpentry workshop group at the Data Science Hub. For three years I was a research assistant at the digital humanities platform project <a itemprop="affiliation" href="https://www.digitalmappa.org/" target="_blank">Digital Mappa</a> at the Center for the History of Print and Digital Culture, where I did project and product management, open-access scholarly publications, and digital pedagogy. Recently I worked on metadata standards at the <a href="https://mukurtu-midwest.libraries.wsu.edu/" target="_blank">Mukurtu Midwest Hub</a> at WiLS (formerly Wisconsin Library Services).</p>
+    <p>Professional interests include digital humanities and academic libraries. Other research areas include medieval studies, literary theory, and new media.</p>
 <div class=text>
   <u>Online</u>: <a itemprop="mainEntityOfPage" href="https://english.wisc.edu/staff/gray-maxwell/" target="_blank">wisc.edu</a> | <a itemprop="mainEntityOfPage" href="https://www.linkedin.com/in/maxgray20" target="_blank">linkedin.com</a> | <a itemprop="mainEntityOfPage" href="https://hcommons.org/members/maxgray20/" target="_blank">hcommons.org</a> | <a itemprop="identifier" href="https://twitter.com/maxgray20" target="_blank">@maxgray20</a><br>
   <u>Programs</u>: MLIS, iSchool, UW-Madison; PhD, English, UW-Madison<br>
