--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <body itemscope itemtype="http://schema.org/Person">
     <div class="navbar">
-  <a href="https://maxgray20.com">Home</a>
-  <a href="https://maxgray20.com">About</a>
+  <p><a href="https://maxgray20.com">Home</a>
+      <a href="https://maxgray20.com">About</a></p>
     </div>
     <div class="raisedbox">
   <h1 itemprop="name">Hello, I'm Maxwell Gray.</h1>
