--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body itemscope itemtype="http://schema.org/Person">
     <div class="navbar">
-  <p><a href="https://maxgray20.com">Home</a>
+  <p class="nav"><a href="https://maxgray20.com">Home</a>
       <a href="https://maxgray20.com">About</a></p>
     </div>
     <div class="raisedbox">
