--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body itemscope itemtype="http://schema.org/Person">
     <div class="navbar">
       <a href="https://maxgray20.com">Home</a>
-      <a href="https://maxgray20.com">About</a>
+      <a href="https://maxgray20.com/about.html">About</a>
     </div>
     <div class="raisedbox">
   <h1 itemprop="name">Hello, I'm Maxwell Gray.</h1>
