--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
     </div>
     <div class="raisedbox">
   <h1 itemprop="name">Hello, I'm Maxwell Gray.</h1>
-  <h2>I make poetry and write public digital scholarship in Wisconsin.</h2>
+  <h2>I make poetry and write public digital scholarship in Madison, Wisconsin.</h2>
+  <p>I study literature and information at the University of Wisconsin-Madison. I do poetry, translation, digital humanities, public digital scholarship, and information literacy. Other research areas include literary theory and new media.</p>
   <h3>Publications</h3>
   <ul>
-     <li>"Beowulf in Teejop," <a  itemprop="creator" href="https://edgeeffects.net/beowulf-teejop/" target="_blank"><em>Edge Effects</em></a> (CHE)</li>
-     <li>“Grave,” <em>Lunch</em> (Punctum Books) &#8702; <a  itemprop="creator" href="https://hcommons.org/deposits/item/hc:29827" target="_blank"><em>CORE</em></a></li>
-    <li>“Wulf and Eadwacer,” <em>Queen Mob’s Teahouse</em> &#8702; <a  itemprop="creator" href="https://hcommons.org/deposits/item/hc:28869" target="_blank"><em>CORE</em></a></li>
-    <li>“‘high places round these lakes’: Medieval Studies and White Settler Colonialism at UW-Madison,” <a  itemprop="creator" href="https://medium.com/the-sundial-acmrs/high-places-round-these-lakes-medieval-studies-and-white-settler-colonialism-at-uw-madison-53c4a19ec574" target="_blank"><em>The Sundial</em></a> (ACMRS)</li>
+     <li>"Beowulf in Teejop," <a  itemprop="creator" href="https://edgeeffects.net/beowulf-teejop/" target="_blank"><em>Edge Effects</em></a> (Center for Culture, History, and Environment, Nelson Institute), also available at <a  itemprop="creator" href="https://digital.library.wisc.edu/1793/81661" target="_blank"><em>MINDS@UW</em></a></li>
+     <li>“Grave,” <em>Lunch</em> (Punctum Books), available at <a  itemprop="creator" href="https://hcommons.org/deposits/item/hc:29827" target="_blank"><em>CORE</em></a></li>
+    <li>“Wulf and Eadwacer,” <em>Queen Mob’s Teahouse</em>, available at <a  itemprop="creator" href="https://hcommons.org/deposits/item/hc:28869" target="_blank"><em>CORE</em></a></li>
+    <li>“‘high places round these lakes’: Medieval Studies and White Settler Colonialism at UW-Madison,” <a  itemprop="creator" href="https://medium.com/the-sundial-acmrs/high-places-round-these-lakes-medieval-studies-and-white-settler-colonialism-at-uw-madison-53c4a19ec574" target="_blank"><em>The Sundial</em></a> (Arizona Center for Medieval and Renaissance Studies), also available at <a  itemprop="creator" href="https://digital.library.wisc.edu/1793/81666" target="_blank"><em>MINDS@UW</em></a></li>
     <li><em>Ezra Pound’s “The Music of Beowulf”: A Digital Critical Edition and Introduction</em>, edit. Maxwell Gray (Madison, WI: Center for the History of Print and Digital Culture, 2019): <a href="https://uw.digitalmappa.org/57" target="_blank">https://uw.digitalmappa.org/57</a>. DOI: <a itemprop="creator" href="https://doi.org/10.21231/5sh6-ga95" target="_blank">10.21231/5sh6-ga95</a>.</li>
   </ul>
     &copy; 2020 Maxwell Gray
