--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       <a href="https://maxgray20.com/about.html">About</a>
     </div>
     <div class="raisedbox">
-  <h1 itemprop="name">Hello, I'm Maxwell Gray.</h1>
-  <h2>I make poetry and write public digital scholarship in Madison, Wisconsin.</h2>
-  <p>I study literature and information at the University of Wisconsin-Madison. I do poetry, translation, digital humanities, public digital scholarship, and information literacy. Other research areas include literary theory and new media.</p>
+  <h1>Hello, I'm </h1><h1 itemprop="name">Maxwell Gray</h1><h1>.</h1>
+  <h2>I make poetry and write public digital scholarship.</h2>
+  <p>I study literature and information at the University of Wisconsin-Madison. I do poetry, translation, digital humanities, public digital scholarship, and information literacy. Other research areas include new media, literary theory and psychoanalysis.</p>
   <h3>Publications</h3>
   <ul>
     <li>“Grave,” <em>Lunch</em> (Punctum Books), available at <a  itemprop="creator" href="https://hcommons.org/deposits/item/hc:29827" target="_blank"><em>CORE</em></a></li>
