--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <a href="https://maxgray20.com/about.html">About</a>
     </div>
     <div class="raisedbox">
-  <h1>Hello, I'm </h1><h1 itemprop="name">Maxwell Gray</h1><h1>.</h1>
+  <h1>Hello, I'm <span itemprop="name">Maxwell Gray<span>.</h1>
   <h2>I make poetry and write public digital scholarship.</h2>
   <p>I study literature and information at the University of Wisconsin-Madison. I do poetry, translation, digital humanities, public digital scholarship, and information literacy. Other research areas include new media, literary theory and psychoanalysis.</p>
   <h3>Publications</h3>
