--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="raisedbox">
   <h1>Hello, I'm <span itemprop="name">Maxwell Gray<span>.</h1>
   <h2>I make poetry and write public digital scholarship.</h2>
-  <p>I study literature and information at the University of Wisconsin-Madison. I do poetry, translation, digital humanities, public digital scholarship, and information literacy. Other research areas include new media, literary theory and psychoanalysis. I call myself a "free-range medievalist." You can find me on Twitter at <a itemprop="identifier" href="https://twitter.com/maxgray20" target="_blank">@maxgray20</a>.</p>
+  <p>I study literature and information at the University of Wisconsin-Madison. I do poetry, translation, digital humanities, public digital scholarship, and information literacy. Find me on Twitter at <a itemprop="identifier" href="https://twitter.com/maxgray20" target="_blank">@maxgray20</a>.</p>
   <h3>Publications</h3>
   <ul>
     <li>“Grave,” <em>Lunch</em> (Punctum Books), available at <a  itemprop="creator" href="https://hcommons.org/deposits/item/hc:29827" target="_blank"><em>CORE</em></a></li>
