--- a/about.html
+++ b/about.html
@@ -13,7 +13,30 @@
 <body itemscope itemtype="http://schema.org/Person">
     <div class="navbar">
       <a href="https://maxgray20.com">Home</a>
-      <a href="https://maxgray20.com">About</a>
+      <a href="https://maxgray20.com/about.html">About</a>
+    </div>
+    <div class="raisedbox">
+  <h1>Hello, I'm <span itemprop="name">Maxwell Gray<span>.</h1>
+  <h2>I make poetry and write public digital scholarship.</h2>
+  <p>I study literature and information at the University of Wisconsin-Madison. I do poetry, translation, digital humanities, public digital scholarship, and information literacy. I also research new media, literary theory and psychoanalysis. You can find me on Twitter at <a itemprop="identifier" href="https://twitter.com/maxgray20" target="_blank">@maxgray20</a>.</p>
+  <p>My current research project is about critical information literacy and new media. The project is a commentary on the Framework for Information Literacy for Higher Education from the Association of College and Research Libraries. My ongoing creative research project is a digital documentary poetry project called MOUNDS. The project also includes public digital scholarship at The Sundial and Edge Effects.</p>
+  <p>For three years I was a research assistant at the digital humanities platform project Digital Mappa at the Center for the History of Print and Digital Culture at UW. For one year I've been a teaching assistant and instructor in the English 100 program in the English department on campus. I’m also involved in the Data Carpentry workshop group at the Data Science Hub.</p>
+  <h3>Degrees</h3>
+  <ul>
+    <li>MA, Library and Information Studies, University of Wisconsin-Madison, 2021</li>
+    <li>MA, English, University of Wisconsin-Madison, 2018</li>
+    <li>MA, Comparative Literature, University of Wisconsin-Madison, 2016</li>
+    <li>BA, English, Phi Beta Kappa, Rhodes College (Memphis, TN), 2014</li>
+  </ul>
+  <h3>Selected Publications</h3>
+  <ul>
+    <li>“Grave,” <em>Lunch</em> (Punctum Books), available at <a  itemprop="creator" href="https://hcommons.org/deposits/item/hc:29827" target="_blank"><em>CORE</em></a></li>
+    <li>“Wulf and Eadwacer,” <em>Queen Mob’s Teahouse</em>, available at <a  itemprop="creator" href="https://hcommons.org/deposits/item/hc:28869" target="_blank"><em>CORE</em></a></li>
+    <li>"Beowulf in Teejop," <a  itemprop="creator" href="https://edgeeffects.net/beowulf-teejop/" target="_blank"><em>Edge Effects</em></a> (Center for Culture, History, and Environment, Nelson Institute), also available at <a  itemprop="creator" href="https://digital.library.wisc.edu/1793/81666" target="_blank"><em>MINDS@UW</em></a></li>
+    <li>“‘high places round these lakes’: Medieval Studies and White Settler Colonialism at UW-Madison,” <a  itemprop="creator" href="https://medium.com/the-sundial-acmrs/high-places-round-these-lakes-medieval-studies-and-white-settler-colonialism-at-uw-madison-53c4a19ec574" target="_blank"><em>The Sundial</em></a> (Arizona Center for Medieval and Renaissance Studies), also available at <a  itemprop="creator" href="https://digital.library.wisc.edu/1793/81661" target="_blank"><em>MINDS@UW</em></a></li>
+    <li><em>Ezra Pound’s “The Music of Beowulf”: A Digital Critical Edition and Introduction</em>, edit. Maxwell Gray (Madison, WI: Center for the History of Print and Digital Culture, 2019): <a href="https://uw.digitalmappa.org/57" target="_blank">https://uw.digitalmappa.org/57</a>. DOI: <a itemprop="creator" href="https://doi.org/10.21231/5sh6-ga95" target="_blank">10.21231/5sh6-ga95</a>.</li>
+  </ul>
+    &copy; 2020 Maxwell Gray
     </div>
     <div class="raisedbox">
   <h1 itemprop="name">Hello, I'm Maxwell Gray.</h1>
