--- a/about.html
+++ b/about.html
@@ -19,9 +19,10 @@
   <h1>Hello, I'm <span itemprop="name">Maxwell Gray<span>.</h1>
   <h2>I make poetry and write public digital scholarship.</h2>
   <p>I study literature and information at the University of Wisconsin-Madison. I do poetry, translation, digital humanities, public digital scholarship, and information literacy. I also research new media, literary theory and psychoanalysis.</p>
-  <p>My current research project is about information literacy and new media. Right now I think the project is a commentary on the <em>Framework for Information Literacy for Higher Education</em> from the Association of College and Research Libraries. My ongoing creative research project is a digital documentary poetry project called <a itemprop="creator" href="https://madisonmounds.com" target="_blank"><em>MOUNDS</em></a>. The project also includes public digital scholarship at <em>The Sundial</em> and <em>Edge Effects</em>.</p>
+  <p>My current research project is about information literacy and new media. My ongoing creative research project is a digital documentary poetry project called <a itemprop="creator" href="https://madisonmounds.com" target="_blank"><em>MOUNDS</em></a>. The project also includes public digital scholarship at <em>The Sundial</em> and <em>Edge Effects</em>.</p>
   <p>For three years I was a research assistant at the digital humanities platform project <a itemprop="affiliation" href="https://www.digitalmappa.org/" target="_blank"><em>Digital Mappa</em></a> at the Center for the History of Print and Digital Culture at UW. For one year I've been a teaching assistant and instructor in the English 100 program in the English department on campus. I’m also involved in the Data Carpentry workshop group at the Data Science Hub.</p>
-  <p>You can find me on Twitter at <a itemprop="identifier" href="https://twitter.com/maxgray20" target="_blank">@maxgray20</a>. You can also find my resume at <a itemprop="mainentityofpage" href="https://www.linkedin.com/in/maxgray20" target="_blank">LinkedIn</a>.</p>
+  <p>You can find me on Twitter at <a itemprop="identifier" href="https://twitter.com/maxgray20" target="_blank">@maxgray20</a>.</p>
+  <p>You can find my resume at <a itemprop="mainentityofpage" href="https://www.linkedin.com/in/maxgray20" target="_blank">LinkedIn</a>.</p>
   <h3>Education</h3>
   <ul>
     <li>MA, Library and Information Studies, University of Wisconsin-Madison, 2021</li>
