--- a/about.html
+++ b/about.html
@@ -29,9 +29,9 @@
   <h3>Education</h3>
   <ul>
     <li>MA, Library and Information Studies, University of Wisconsin-Madison, 2021</li>
-    <li>MA, English—Literary Studies, University of Wisconsin-Madison, 2018</li>
+    <li>MA, English Literary Studies, University of Wisconsin-Madison, 2018</li>
     <li>MA, Comparative Literature, University of Wisconsin-Madison, 2016</li>
-    <li>BA, English, Phi Beta Kappa, Rhodes College (Memphis, TN), 2014</li>
+    <li>BA, English Literature, Phi Beta Kappa, Rhodes College (Memphis, TN), 2014</li>
   </ul>
   <h3>Selected Publications</h3>
   <ul>
