--- a/about.html
+++ b/about.html
@@ -23,11 +23,12 @@
   <p>For three years I was a research assistant at the digital humanities platform project <a itemprop="affiliation" href="https://www.digitalmappa.org/" target="_blank"><em>Digital Mappa</em></a> at the Center for the History of Print and Digital Culture at UW. For one year I've been a teaching assistant and instructor in the English 100 program in the English department on campus. I’m also involved in the Data Carpentry workshop group at the Data Science Hub on campus.</p>
   <h3>Online</h3>
    <ul>
-    <li>You can find my resume online at <a itemprop="mainentityofpage" href="https://www.linkedin.com/in/maxgray20" target="_blank">LinkedIn</a>.</li>
     <li>You can find me on Twitter at <a itemprop="identifier" href="https://twitter.com/maxgray20" target="_blank">@maxgray20</a>.</li>
+    <li>You can find my resume online at <a itemprop="mainentityofpage" href="https://www.linkedin.com/in/maxgray20" target="_blank">LinkedIn</a>.</li>
   </ul>    
   <h3>Education</h3>
   <ul>
+    <li>MA, Library and Info Studies, University of Wisconsin-Madison</li>
     <li>MA, English Literary Studies, University of Wisconsin-Madison</li>
     <li>MA, Comparative Literature, University of Wisconsin-Madison</li>
     <li>BA, English Literature, Phi Beta Kappa, Rhodes College</li>
