--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
     <div class="navbar">
       <a href="https://maxgray20.com">Home</a>
       <a href="https://maxgray20.com/about.html">About</a>
+      <a href="https://maxgray20.com/contact.html">Contact</a>
     </div>
     <div class="raisedbox">
   <h1>Hello, I'm <span itemprop="name">Maxwell Gray<span>.</h1>
