--- a/contact.html
+++ b/contact.html
@@ -19,8 +19,8 @@
     <div class="raisedbox">
   <h1>Hello, I'm <span itemprop="name">Maxwell Gray<span>.</h1>
   <h2>I make poetry and write public digital scholarship.</h2>
-    <p>You can contact me via email at local-part maxgray20 at domain gmail.com.</p>
-    &copy; 2020 Maxwell Gray
+    <p>You can contact me via email at local-part maxgray20 said that : domain gmail.com.</p>
+    &copy; 2021 Maxwell Gray
     </div>
 </body>
 </html>
