--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
     <div class="raisedbox">
   <h1>Hello, I'm <span itemprop="name">Maxwell Gray<span>.</h1>
   <h2>I make poetry and write public digital scholarship.</h2>
-    <p>You can contact me via email at local-part maxgray20 : domain gmail.com.</p>
+    <p>You can contact me via email at local-part mgray5 : domain wisc.edu.</p>
     &copy; 2021 Maxwell Gray
     </div>
 </body>
