--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="raisedbox">
   <h1>Hello, I'm <span itemprop="name">Maxwell Gray<span>.</h1>
   <h2>I make poetry and write public digital scholarship.</h2>
-  <p>I studied literature and information at the University of Wisconsin—Madison. Now I'm a digital scholarship librarian in Raynor Memorial Libraries at Marquette University, where I'm part of the Digital Scholarship Lab. I do <a itemprop="creator" href="https://madisonmounds.com" target="_blank">poetry</a>, translation, digital humanities, public digital scholarship, and information literacy.</p>
+  <p>I studied literature and information at the University of Wisconsin—Madison. Now I'm a digital scholarship librarian in Raynor Memorial Libraries at Marquette University, where I'm part of the <a itemprop="affiliation" href="https://www.marquette.edu/library/digital-scholarship/the-lab/index.php" target="_blank">Digital Scholarship Lab</a>. I do <a itemprop="creator" href="https://madisonmounds.com" target="_blank">poetry</a>, translation, digital humanities, public digital scholarship, and information literacy.</p>
   <p>You can find me on Twitter at <a itemprop="identifier" href="https://twitter.com/maxgray20" target="_blank">@maxgray20</a>.</p>
   <h3>Selected Publications</h3>
   <ul>
